--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
         <section>
             <h2><span>Our Founder</span></h2>
-            <img class="profile_img" src ="images/user.jpg" alt="This is an Egg">
+            <img class="profile_img" src ="images/user.jpg" alt="This is the Owner">
             <h3 class="profile_name">Mr.Androide</h3>
             <div class="sm-handle">
             <a href="http://youtube.com" target="_blank" class="yt-handle" rel="noopener noreferrer" ><i class="fa fa-youtube-play yt-handle"></i> Youtube</a>
